# mcp-server-Human-In-the-Loop-MCP-Server

./: .gitignore  ELICITATION_API_FIXES.md  FASTMCP_COMPATIBILITY_FIX.md  README.md  README_V4_1_CLEAN.md  TODO.md  human_loop_server.py  pyproject.toml  run_server.py
.github/: copilot-instructions.md  knowledge_base
.github/instructions/: WORKSPACE_PRACTICES.instructions.md
.github/prompts/: beastmode-3.1-ask.prompt.md  create-instruction.prompt.md  improve-system.prompt.md  websearch.prompt.md
archive/: QUICK_TEST_CHECKLIST.md  README_V4_old.md  TESTING_PLAN_SUMMARY.md  TESTING_PLAN_V3_COMPREHENSIVE.md  TESTING_RESULTS_SUMMARY.md  TEST_RESULTS_V3.md  test_manual.py  test_plan_v3.py  test_prompt_direct.py  test_v3_elicitations.py  testing_helper_v3.py
docs/: CLEANUP_PLAN.md  CONTEXT.md  ENHANCED_PROMPTS_SUMMARY.md  PROJECT_COMPLETION_SUMMARY.md  README.md  V4_1_FINAL_SUMMARY.md
docs/ToT/: project_organization_analysis.md
docs/archive/: MIGRATION_GUIDE.md  MIGRATION_STRATEGY.md  PRODUCTION_EXAMPLES.md  V2_COMPLETION_SUMMARY.md
docs/archive/reports/: mcp-debugging-analysis-2025-09-19.md
docs/archive/tasks/: TASKS.md
docs/tasks/: TASKS.md
examples/: README.md  example_v3_usage.py
legacy/: human_loop_server.py  human_loop_server_v3.py
src/human_in_the_loop/: __init__.py
src/human_in_the_loop/dialogs/: __init__.py  base.py  choice.py  confirmation.py  info.py  input.py  multiline.py
src/human_in_the_loop/tools/: __init__.py  dialog_tools.py  prompts.py
src/human_in_the_loop/utils/: __init__.py  gui.py  platform.py  styling.py
src/human_in_the_loop_mcp/: __init__.py  prompts.py  server.py
tests/: test_dialogs.py
tests/integration/: test_integration.py
tests/unit/: test_prompt_tools.py  test_v3_basic.py  test_v3_detailed.py
